--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.7.16",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
